--- a/index.html
+++ b/index.html
@@ -147,19 +147,19 @@
       </mask>
       <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
       <g id="js-meets-circles">
-        <circle fill="white" stroke="none" r="85" transform="translate(767,258)" data-x="767" data-y="258"></circle>
-        <circle fill="white" stroke="none" r="69" transform="translate(693,239)" data-x="693" data-y="239"></circle>
-        <circle fill="white" stroke="none" r="56" transform="translate(629,214)" data-x="629" data-y="214"></circle>
-        <circle fill="white" stroke="none" r="54" transform="translate(517,288)" data-x="517" data-y="288"></circle>
-        <circle fill="white" stroke="none" r="77" transform="translate(741,220)" data-x="741" data-y="220"></circle>
-        <circle fill="white" stroke="none" r="100" transform="translate(764,282)" data-x="764" data-y="282"></circle>
-        <circle fill="white" stroke="none" r="59" transform="translate(550,291)" data-x="550" data-y="291"></circle>
-        <circle fill="white" stroke="none" r="98" transform="translate(748,207)" data-x="748" data-y="207"></circle>
-        <circle fill="white" stroke="none" r="61" transform="translate(635,227)" data-x="635" data-y="227"></circle>
-        <circle fill="white" stroke="none" r="93" transform="translate(632,226)" data-x="632" data-y="226"></circle>
-        <circle fill="white" stroke="none" r="58" transform="translate(580,251)" data-x="580" data-y="251"></circle>
-        <circle fill="white" stroke="none" r="93" transform="translate(502,215)" data-x="502" data-y="215"></circle>
-        <circle fill="white" stroke="none" r="96" transform="translate(623,296)" data-x="623" data-y="296"></circle>
+        <circle fill="white" stroke="none" r="76" transform="translate(708,266)" data-x="708" data-y="266"></circle>
+        <circle fill="white" stroke="none" r="94" transform="translate(644,249)" data-x="644" data-y="249"></circle>
+        <circle fill="white" stroke="none" r="76" transform="translate(577,223)" data-x="577" data-y="223"></circle>
+        <circle fill="white" stroke="none" r="63" transform="translate(691,222)" data-x="691" data-y="222"></circle>
+        <circle fill="white" stroke="none" r="54" transform="translate(726,283)" data-x="726" data-y="283"></circle>
+        <circle fill="white" stroke="none" r="66" transform="translate(601,294)" data-x="601" data-y="294"></circle>
+        <circle fill="white" stroke="none" r="97" transform="translate(552,252)" data-x="552" data-y="252"></circle>
+        <circle fill="white" stroke="none" r="69" transform="translate(530,285)" data-x="530" data-y="285"></circle>
+        <circle fill="white" stroke="none" r="50" transform="translate(621,207)" data-x="621" data-y="207"></circle>
+        <circle fill="white" stroke="none" r="84" transform="translate(582,266)" data-x="582" data-y="266"></circle>
+        <circle fill="white" stroke="none" r="73" transform="translate(618,233)" data-x="618" data-y="233"></circle>
+        <circle fill="white" stroke="none" r="71" transform="translate(501,241)" data-x="501" data-y="241"></circle>
+        <circle fill="white" stroke="none" r="100" transform="translate(616,260)" data-x="616" data-y="260"></circle>
       </g>
       <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -560,49 +560,51 @@
   <path id="js-wave1-top" d="M100,50 C100,22.3857625 77.6142375,0 50,0 C22.3857625,0 0,22.3857625 0,50 L100,50 Z M200,50 C200,22.3857625 177.614237,0 150,0 C122.385763,0 100,22.3857625 100,50 L200,50 Z M300,50 C300,22.3857625 277.614237,0 250,0 C222.385763,0 200,22.3857625 200,50 L300,50 Z M400,50 C400,22.3857625 377.614237,0 350,0 C322.385763,0 300,22.3857625 300,50 L400,50 Z M500,50 C500,22.3857625 477.614237,0 450,0 C422.385763,0 400,22.3857625 400,50 L500,50 Z M600,50 C600,22.3857625 577.614237,0 550,0 C522.385763,0 500,22.3857625 500,50 L600,50 Z M700,50 C700,22.3857625 677.614237,0 650,0 C622.385763,0 600,22.3857625 600,50 L700,50 Z M800,50 C800,22.3857625 777.614237,0 750,0 C722.385763,0 700,22.3857625 700,50 L800,50 Z M900,50 C900,22.3857625 877.614237,0 850,0 C822.385763,0 800,22.3857625 800,50 L900,50 Z M1000,50 C1000,22.3857625 977.614237,0 950,0 C922.385763,0 900,22.3857625 900,50 L1000,50 Z M1100,50 C1100,22.3857625 1077.61424,0 1050,0 C1022.38576,0 1000,22.3857625 1000,50 L1100,50 Z M1200,50 C1200,22.3857625 1177.61424,0 1150,0 C1122.38576,0 1100,22.3857625 1100,50 L1200,50 Z M1300,50 C1300,22.3857625 1277.61424,0 1250,0 C1222.38576,0 1200,22.3857625 1200,50 L1300,50 Z M1400,50 C1400,22.3857625 1377.61424,0 1350,0 C1322.38576,0 1300,22.3857625 1300,50 L1400,50 Z M1500,50 C1500,22.3857625 1477.61424,0 1450,0 C1422.38576,0 1400,22.3857625 1400,50 L1500,50 Z M1600,50 C1600,22.3857625 1577.61424,0 1550,0 C1522.38576,0 1500,22.3857625 1500,50 L1600,50 Z M1700,50 C1700,22.3857625 1677.61424,0 1650,0 C1622.38576,0 1600,22.3857625 1600,50 L1700,50 Z M1800,50 C1800,22.3857625 1777.61424,0 1750,0 C1722.38576,0 1700,22.3857625 1700,50 L1800,50 Z M1900,50 C1900,22.3857625 1877.61424,0 1850,0 C1822.38576,0 1800,22.3857625 1800,50 L1900,50 Z M2000,50 C2000,22.3857625 1977.61424,0 1950,0 C1922.38576,0 1900,22.3857625 1900,50 L2000,50 Z"></path>
 </g>
       <g id="js-svg-circles" class="h-g">
-        <circle fill="white" stroke="" r="0" transform="translate(370,209)" data-x="370" data-y="209"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(886,817)" data-x="886" data-y="817"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(726,794)" data-x="726" data-y="794"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(550,254)" data-x="550" data-y="254"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(383,702)" data-x="383" data-y="702"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(695,72)" data-x="695" data-y="72"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(561,511)" data-x="561" data-y="511"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(841,780)" data-x="841" data-y="780"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(316,299)" data-x="316" data-y="299"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(500,457)" data-x="500" data-y="457"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(537,273)" data-x="537" data-y="273"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(744,572)" data-x="744" data-y="572"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(563,618)" data-x="563" data-y="618"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(413,355)" data-x="413" data-y="355"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(716,221)" data-x="716" data-y="221"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(744,525)" data-x="744" data-y="525"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(258,300)" data-x="258" data-y="300"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(759,110)" data-x="759" data-y="110"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(269,316)" data-x="269" data-y="316"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(321,844)" data-x="321" data-y="844"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(727,839)" data-x="727" data-y="839"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(1009,512)" data-x="1009" data-y="512"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(442,583)" data-x="442" data-y="583"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(298,87)" data-x="298" data-y="87"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(973,638)" data-x="973" data-y="638"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(695,480)" data-x="695" data-y="480"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(543,612)" data-x="543" data-y="612"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(1016,356)" data-x="1016" data-y="356"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(349,398)" data-x="349" data-y="398"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(894,670)" data-x="894" data-y="670"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(500,83)" data-x="500" data-y="83"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(1003,609)" data-x="1003" data-y="609"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(776,692)" data-x="776" data-y="692"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(725,274)" data-x="725" data-y="274"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(584,781)" data-x="584" data-y="781"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(395,162)" data-x="395" data-y="162"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(777,670)" data-x="777" data-y="670"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(549,426)" data-x="549" data-y="426"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(937,421)" data-x="937" data-y="421"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(986,463)" data-x="986" data-y="463"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(846,241)" data-x="846" data-y="241"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(278,464)" data-x="278" data-y="464"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(378,465)" data-x="378" data-y="465"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(501,544)" data-x="501" data-y="544"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(692,777)" data-x="692" data-y="777"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(427,82)" data-x="427" data-y="82"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(338,186)" data-x="338" data-y="186"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(893,598)" data-x="893" data-y="598"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(647,694)" data-x="647" data-y="694"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(848,549)" data-x="848" data-y="549"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(533,704)" data-x="533" data-y="704"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(875,238)" data-x="875" data-y="238"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(273,314)" data-x="273" data-y="314"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(469,632)" data-x="469" data-y="632"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(569,149)" data-x="569" data-y="149"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(423,572)" data-x="423" data-y="572"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(428,829)" data-x="428" data-y="829"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(844,620)" data-x="844" data-y="620"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(485,573)" data-x="485" data-y="573"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(856,672)" data-x="856" data-y="672"></circle>
       </g>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(240)">
-        <path id="js-svg-g" d="M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572" stroke="#868A86" stroke-width="6"></path>
-        <path id="js-svg-s" d="M318.302873,832.663224 C291.629797,839.810253 264.212659,823.98096 257.06563,797.307885 C249.9186,770.634809 265.747893,743.21767 292.420969,736.070641 C319.094044,728.923612 334.923337,701.506473 327.776308,674.833398 C320.629279,648.160322 293.21214,632.331029 266.539064,639.478058 C239.865988,646.625088 212.44885,630.795795 205.301821,604.122719 C198.154791,577.449644 213.984084,550.032505 240.65716,542.885476 C267.330235,535.738447 283.159528,508.321308 276.012499,481.648232 C268.86547,454.975157 241.448331,439.145864 214.775255,446.292893 C188.102179,453.439922 160.685041,437.61063 153.538012,410.937554 C146.390982,384.264478 162.220275,356.84734 188.893351,349.700311 C215.566426,342.553281 231.395719,315.136143 224.24869,288.463067 C217.101661,261.789991 189.684522,245.960699 163.011446,253.107728 C136.33837,260.254757 108.921232,244.425465 101.774203,217.752389 C94.6271734,191.079313 110.456466,163.662174 137.129542,156.515145 C163.802617,149.368116 179.63191,121.950978 172.484881,95.2779018 C165.337852,68.604826 137.920713,52.7755336 111.247637,59.9225627" stroke="#868A86" stroke-width="6"></path>
+        <path id="js-svg-s" stroke-dashoffset="700" stroke-dasharray="10,0,500, 50, 100, 30" d="M318.302873,832.663224 C291.629797,839.810253 264.212659,823.98096 257.06563,797.307885 C249.9186,770.634809 265.747893,743.21767 292.420969,736.070641 C319.094044,728.923612 334.923337,701.506473 327.776308,674.833398 C320.629279,648.160322 293.21214,632.331029 266.539064,639.478058 C239.865988,646.625088 212.44885,630.795795 205.301821,604.122719 C198.154791,577.449644 213.984084,550.032505 240.65716,542.885476 C267.330235,535.738447 283.159528,508.321308 276.012499,481.648232 C268.86547,454.975157 241.448331,439.145864 214.775255,446.292893 C188.102179,453.439922 160.685041,437.61063 153.538012,410.937554 C146.390982,384.264478 162.220275,356.84734 188.893351,349.700311 C215.566426,342.553281 231.395719,315.136143 224.24869,288.463067 C217.101661,261.789991 189.684522,245.960699 163.011446,253.107728 C136.33837,260.254757 108.921232,244.425465 101.774203,217.752389 C94.6271734,191.079313 110.456466,163.662174 137.129542,156.515145 C163.802617,149.368116 179.63191,121.950978 172.484881,95.2779018 C165.337852,68.604826 137.920713,52.7755336 111.247637,59.9225627" stroke="#868A86" stroke-width="6" opacity="0" stroke-linecap="round"></path>
+        <path id="js-svg-g" d="M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572" stroke="#868A86" stroke-width="6" opacity="0"></path>
         <g>
-          <rect fill="url(#linearGradient-1)" transform="translate(190.500000, 364.500000) rotate(-105.000000) translate(-190.500000, -364.500000) " x="131" y="308" width="119" height="113"></rect>
-          <rect fill="#FFFFFF" transform="translate(168.165677, 167.713981) rotate(-15.000000) translate(-168.165677, -167.713981) " x="31.1310874" y="-69" width="274.069179" height="374"></rect>
+          <g>
+            <rect fill="url(#linearGradient-1)" transform="translate(190.500000, 364.500000) rotate(-105.000000) translate(-190.500000, -364.500000) " x="131" y="308" width="119" height="113"></rect>
+            <rect fill="#FFFFFF" transform="translate(168.165677, 167.713981) rotate(-15.000000) translate(-168.165677, -167.713981) " x="31.1310874" y="-69" width="274.069179" height="374"></rect>
+          </g>
+          <g transform="translate(272.000000, 703.000000) rotate(-185.000000) translate(-272.000000, -703.000000) translate(95.000000, 469.000000)">
+            <rect fill="url(#linearGradient-1)" transform="translate(196.500000, 393.000000) rotate(-105.000000) translate(-196.500000, -393.000000) " x="137" y="327" width="119" height="132"></rect>
+            <rect fill="#FFFFFF" transform="translate(176.562999, 181.701679) rotate(-15.000000) translate(-176.562999, -181.701679) " x="33.6214332" y="31.4221551" width="285.883132" height="300.559048"></rect>
+          </g>
         </g>
-        <g transform="translate(272.000000, 703.000000) rotate(-185.000000) translate(-272.000000, -703.000000) translate(95.000000, 469.000000)">
-          <rect fill="url(#linearGradient-1)" transform="translate(196.500000, 393.000000) rotate(-105.000000) translate(-196.500000, -393.000000) " x="137" y="327" width="119" height="132"></rect>
-          <rect fill="#FFFFFF" transform="translate(176.562999, 181.701679) rotate(-15.000000) translate(-176.562999, -181.701679) " x="33.6214332" y="31.4221551" width="285.883132" height="300.559048"></rect>
-        </g>
-        <path id="js-svg-v" d="M321,359 L398,476 L474,359 L321,359 Z" stroke="#979797" stroke-width="6"></path>
+        <path id="js-svg-v" stroke-linecap="square" d="M321,359 L398,476 L474,359 L321,359 Z" stroke="#979797" stroke-width="6" opacity="0"></path>
       </g>
     </svg>
     <script src="bower_components/jquery/dist/jquery.js"></script>
