working on triangles blow

--- a/index.html
+++ b/index.html
@@ -147,16 +147,16 @@
       </mask>
       <rect width="1280" height="900" fill="url(#space-dogs-pattern)" mask="url(#meets-mask)"></rect>
       <g id="js-meets-circles">
-        <circle fill="white" stroke="none" r="52" transform="translate(779,221)" data-x="779" data-y="221"></circle>
-        <circle fill="white" stroke="none" r="56" transform="translate(644,258)" data-x="644" data-y="258"></circle>
-        <circle fill="white" stroke="none" r="50" transform="translate(539,228)" data-x="539" data-y="228"></circle>
-        <circle fill="white" stroke="none" r="79" transform="translate(619,274)" data-x="619" data-y="274"></circle>
-        <circle fill="white" stroke="none" r="54" transform="translate(717,217)" data-x="717" data-y="217"></circle>
-        <circle fill="white" stroke="none" r="79" transform="translate(635,215)" data-x="635" data-y="215"></circle>
-        <circle fill="white" stroke="none" r="88" transform="translate(520,257)" data-x="520" data-y="257"></circle>
-        <circle fill="white" stroke="none" r="89" transform="translate(638,233)" data-x="638" data-y="233"></circle>
-        <circle fill="white" stroke="none" r="51" transform="translate(571,278)" data-x="571" data-y="278"></circle>
-        <circle fill="white" stroke="none" r="90" transform="translate(703,277)" data-x="703" data-y="277"></circle>
+        <circle fill="white" stroke="none" r="57" transform="translate(616,248)" data-x="616" data-y="248"></circle>
+        <circle fill="white" stroke="none" r="59" transform="translate(775,206)" data-x="775" data-y="206"></circle>
+        <circle fill="white" stroke="none" r="80" transform="translate(528,221)" data-x="528" data-y="221"></circle>
+        <circle fill="white" stroke="none" r="54" transform="translate(526,292)" data-x="526" data-y="292"></circle>
+        <circle fill="white" stroke="none" r="62" transform="translate(735,279)" data-x="735" data-y="279"></circle>
+        <circle fill="white" stroke="none" r="89" transform="translate(633,221)" data-x="633" data-y="221"></circle>
+        <circle fill="white" stroke="none" r="85" transform="translate(595,267)" data-x="595" data-y="267"></circle>
+        <circle fill="white" stroke="none" r="56" transform="translate(651,206)" data-x="651" data-y="206"></circle>
+        <circle fill="white" stroke="none" r="77" transform="translate(583,214)" data-x="583" data-y="214"></circle>
+        <circle fill="white" stroke="none" r="100" transform="translate(671,294)" data-x="671" data-y="294"></circle>
       </g>
       <rect width="1280" height="900" fill="url(#owls-pattern)" mask="url(#burst-mask)"></rect>
       <g stroke="none" stroke-width="1" fill="none" fill-rule="evenodd" transform="translate(23,130)">
@@ -307,41 +307,44 @@
         <path opacity="0" fill="url(#caleydoscope-pattern2)" d="M463.487,646.524c2.119,0,1.793,1.63,4.891,1.63c4.4,0,8.966-4.728,8.966-9.779c0-4.728-2.281-7.337-6.52-7.337c-15.73,0-42.385,22.089-42.385,42.387c0,1.301-1.142,2.442-2.444,2.442c-1.302,0-2.444-1.142-2.444-2.442c0-23.72,28.771-47.273,47.273-47.273c7.171,0,11.412,5.542,11.412,12.226c0,7.496-6.358,14.671-13.856,14.671c-3.913,0-6.113-1.954-6.521-2.28c-0.488-0.49-0.816-1.142-0.816-1.874C461.041,647.503,462.183,646.524,463.487,646.524z"></path>
       </g>
       <g id="js-svg-circles" class="h-g">
-        <circle fill="white" stroke="" r="0" transform="translate(971,614)" data-x="971" data-y="614"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(412,723)" data-x="412" data-y="723"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(384,783)" data-x="384" data-y="783"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(370,310)" data-x="370" data-y="310"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(633,377)" data-x="633" data-y="377"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(988,404)" data-x="988" data-y="404"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(419,181)" data-x="419" data-y="181"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(895,788)" data-x="895" data-y="788"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(756,503)" data-x="756" data-y="503"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(329,203)" data-x="329" data-y="203"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(364,118)" data-x="364" data-y="118"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(951,384)" data-x="951" data-y="384"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(381,497)" data-x="381" data-y="497"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(341,773)" data-x="341" data-y="773"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(824,564)" data-x="824" data-y="564"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(600,234)" data-x="600" data-y="234"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(966,344)" data-x="966" data-y="344"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(315,323)" data-x="315" data-y="323"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(273,758)" data-x="273" data-y="758"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(258,333)" data-x="258" data-y="333"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(504,169)" data-x="504" data-y="169"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(976,593)" data-x="976" data-y="593"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(437,843)" data-x="437" data-y="843"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(338,205)" data-x="338" data-y="205"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(794,214)" data-x="794" data-y="214"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(277,645)" data-x="277" data-y="645"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(385,485)" data-x="385" data-y="485"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(1022,683)" data-x="1022" data-y="683"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(699,203)" data-x="699" data-y="203"></circle>
-        <circle fill="white" stroke="" r="0" transform="translate(613,74)" data-x="613" data-y="74"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(349,63)" data-x="349" data-y="63"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(834,508)" data-x="834" data-y="508"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(1005,417)" data-x="1005" data-y="417"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(839,135)" data-x="839" data-y="135"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(950,577)" data-x="950" data-y="577"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(623,367)" data-x="623" data-y="367"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(240,351)" data-x="240" data-y="351"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(808,627)" data-x="808" data-y="627"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(580,835)" data-x="580" data-y="835"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(390,384)" data-x="390" data-y="384"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(310,127)" data-x="310" data-y="127"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(990,457)" data-x="990" data-y="457"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(611,192)" data-x="611" data-y="192"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(904,443)" data-x="904" data-y="443"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(404,55)" data-x="404" data-y="55"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(886,285)" data-x="886" data-y="285"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(861,313)" data-x="861" data-y="313"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(713,176)" data-x="713" data-y="176"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(733,91)" data-x="733" data-y="91"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(621,51)" data-x="621" data-y="51"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(344,323)" data-x="344" data-y="323"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(657,396)" data-x="657" data-y="396"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(778,738)" data-x="778" data-y="738"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(672,124)" data-x="672" data-y="124"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(779,445)" data-x="779" data-y="445"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(812,605)" data-x="812" data-y="605"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(248,556)" data-x="248" data-y="556"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(354,468)" data-x="354" data-y="468"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(593,298)" data-x="593" data-y="298"></circle>
+        <circle fill="white" stroke="" r="0" transform="translate(289,532)" data-x="289" data-y="532"></circle>
       </g>
+      <clipPath id="clip1">
+        <rect x="200" y="400" width="200" height="400"></rect>
+      </clipPath>
       <mask id="svg-s-mask">
         <g transform="translate(250,0)">
-          <g class="svg-stroke">
-            <path id="js-svg-s" stroke-dashoffset="700" stroke-dasharray="10,0,500, 50, 100, 30" d="M318.302873,832.663224 C291.629797,839.810253 264.212659,823.98096 257.06563,797.307885 C249.9186,770.634809 265.747893,743.21767 292.420969,736.070641 C319.094044,728.923612 334.923337,701.506473 327.776308,674.833398 C320.629279,648.160322 293.21214,632.331029 266.539064,639.478058 C239.865988,646.625088 212.44885,630.795795 205.301821,604.122719 C198.154791,577.449644 213.984084,550.032505 240.65716,542.885476 C267.330235,535.738447 283.159528,508.321308 276.012499,481.648232 C268.86547,454.975157 241.448331,439.145864 214.775255,446.292893 C188.102179,453.439922 160.685041,437.61063 153.538012,410.937554 C146.390982,384.264478 162.220275,356.84734 188.893351,349.700311 C215.566426,342.553281 231.395719,315.136143 224.24869,288.463067 C217.101661,261.789991 189.684522,245.960699 163.011446,253.107728 C136.33837,260.254757 108.921232,244.425465 101.774203,217.752389 C94.6271734,191.079313 110.456466,163.662174 137.129542,156.515145 C163.802617,149.368116 179.63191,121.950978 172.484881,95.2779018 C165.337852,68.604826 137.920713,52.7755336 111.247637,59.9225627" stroke-linecap="round" class="svg-letter svg-letter--s"></path>
+          <g id="js-svg-s-wrapper" opacity="0" class="svg-stroke">
+            <path id="js-svg-s" d="M318.302873,832.663224 C291.629797,839.810253 264.212659,823.98096 257.06563,797.307885 C249.9186,770.634809 265.747893,743.21767 292.420969,736.070641 C319.094044,728.923612 334.923337,701.506473 327.776308,674.833398 C320.629279,648.160322 293.21214,632.331029 266.539064,639.478058 C239.865988,646.625088 212.44885,630.795795 205.301821,604.122719 C198.154791,577.449644 213.984084,550.032505 240.65716,542.885476 C267.330235,535.738447 283.159528,508.321308 276.012499,481.648232 C268.86547,454.975157 241.448331,439.145864 214.775255,446.292893 C188.102179,453.439922 160.685041,437.61063 153.538012,410.937554 C146.390982,384.264478 162.220275,356.84734 188.893351,349.700311 C215.566426,342.553281 231.395719,315.136143 224.24869,288.463067 C217.101661,261.789991 189.684522,245.960699 163.011446,253.107728 C136.33837,260.254757 108.921232,244.425465 101.774203,217.752389 C94.6271734,191.079313 110.456466,163.662174 137.129542,156.515145 C163.802617,149.368116 179.63191,121.950978 172.484881,95.2779018 C165.337852,68.604826 137.920713,52.7755336 111.247637,59.9225627" stroke-linecap="round" class="svg-letter svg-letter--s"></path>
           </g>
         </g>
       </mask>
@@ -354,7 +357,7 @@
       </mask>
       <mask id="svg-g-mask">
         <g transform="translate(250,0)">
-          <g class="svg-stroke">
+          <g id="js-svg-g-wrapper" class="svg-stroke">
             <path id="js-svg-g" d="M539,400.572 C539,441.994 572.579,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 M595,328 C562.778,336.412 539,365.716 539,400.572 C539,441.994 572.578,475.572 614,475.572 C655.422,475.572 689,441.994 689,400.572 L620.127,400.572" opacity="0" class="svg-letter"></path>
           </g>
         </g>
@@ -370,7 +373,7 @@
       <g transform="translate(250,0)" id="js-gradient" class="h-g">
         <g>
           <rect fill="url(#linearGradient-1)" transform="translate(190.500000, 364.500000) rotate(-105.000000) translate(-190.500000, -364.500000) " x="131" y="308" width="119" height="113"></rect>
-          <rect fill="#FFFFFF" transform="translate(168.165677, 167.713981) rotate(-15.000000) translate(-168.165677, -167.713981) " x="31.1310874" y="-69" width="274.069179" height="374"></rect>
+          <rect fill="#FFFFFF" transform="translate(168.165677, 167.713981) rotate(-15.000000) translate(-168.165677, -167.713981) " x="31.1310874" y="-69" width="190" height="374"></rect>
         </g>
         <g transform="translate(272.000000, 703.000000) rotate(-185.000000) translate(-272.000000, -703.000000) translate(95.000000, 469.000000)">
           <rect fill="url(#linearGradient-1)" transform="translate(196.500000, 393.000000) rotate(-105.000000) translate(-196.500000, -393.000000) " x="137" y="327" width="119" height="132"></rect>
